Fixed contrast issue in day details page

--- a/react-weather-app/src/styles/dayDetails.scss
+++ b/react-weather-app/src/styles/dayDetails.scss
@@ -20,7 +20,7 @@
     padding: 10px 0;
   }
   .time {
-    color: grey;
+    color: #EDEDED;
     padding-bottom: 12px;
     background-color: #2c3947;
     @include desktop{
@@ -32,7 +32,7 @@
     padding-top: 20px;
   }
   .temp-day {
-    color: #1e7f90;
+    color: #96DCE9;
     padding: 10px 0;
   }
   .weather-cond-day {
@@ -56,8 +56,12 @@
     margin: 0 0 20px 0;
     h2 {
       text-align: center;
-      color: #566574;
+      color: #C1CDD1;
       font-size: 28px;
     }
   }
+}
+
+#recharts_measurement_span{
+  color: black;
 }
